# wordle-solver

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
docs/reports/: checkpoint01.md
lib/: CMakeLists.txt  ProgressBar.cpp  ProgressBar.h  Simulator.cpp  Simulator.h  trie.cpp  trie.h  trie.tpp  wordle.cpp  wordle.h  wordleLoop.cpp  wordleLoop.h  wordleRegression.cpp  wordleRegression.h
tests/: CMakeLists.txt  wordle_tests.cpp
